# mine-adapter-minio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
mine_adapter_minio/: admin_adapter.py  factory.py  object_storage_adapter.py
