[project]
name = "mine-adapter-minio"
version = "0.1.4"
description = "MinIO adapter implementation for mine-spec"
authors = [
    {name = "Elson Silva",email = "elsonjuniog@gmail.com"}
]
license = {text = "AGPL"}
readme = "README.md"

packages = [{ include = "mine_adapter_minio", from = "src" }]

requires-python = ">=3.11"

dependencies = [
    "boto3 (>=1.42.49,<2.0.0)",
    "mine-spec @ git+https://github.com/elsonjunio/mine-spec.git@v0.1.4",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "blue (>=0.9.1,<0.10.0)"
]


